detached texture from graphicsdevice, and fixed destructor issues

--- a/Game/imgui.ini
+++ b/Game/imgui.ini
@@ -4,12 +4,22 @@ Size=334,254
 Collapsed=1
 
 [Window][Test]
-Pos=576,321
+Pos=455,207
 Size=572,321
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=105,0
+Pos=568,172
 Size=550,680
 Collapsed=1
+
+[Window][Dear ImGui Debug Log]
+Pos=472,186
+Size=430,156
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=558,174
+Size=339,290
+Collapsed=0
 
