--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -92,7 +92,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;OPENGL_EXPORTS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>src;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Primitives;src\Maths;src\Graphics\Utils\Fonts;src\Graphics\Utils\Textures;src\IO;src\vendor\imgui;src\vendor\freetype;src\vendor;src\test;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Primitives;src\Maths;src\Graphics\Utils\Fonts;src\Graphics\Utils\Textures;src\Graphics\Utils\Model Loading;src\IO;src\vendor\imgui;src\vendor\freetype;src\vendor;src\test;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <ShowIncludes>false</ShowIncludes>
@@ -109,7 +109,7 @@
       <AdditionalDependencies>glew32s.lib;glfw3.lib;Opengl32.lib;$(ProjectDir)src\vendor\freetype\freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <PostBuildEvent>
-      <Command>xcopy /y /d "$(SolutionDir)bin\$(Platform)\$(Configuration)\*.dll" "$(SolutionDir)out\$(Configuration)\$(Platform)\out"</Command>
+      <Command>$(ProjectDir)post_build.bat $(Platform) $(Configuration)</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -360,22 +360,8 @@
       <LinkCompiled>true</LinkCompiled>
     </ClCompile>
     <ClCompile Include="src\Maths\Matrix.cpp" />
-    <ClCompile Include="src\Maths\Random.cpp" />
     <ClCompile Include="src\stdu\rich_string.cpp" />
     <ClCompile Include="src\stdu\unique.cpp" />
-    <ClCompile Include="src\test\DemoFlappyBird.cpp" />
-    <ClCompile Include="src\test\TestAdvancedLighting.cpp" />
-    <ClCompile Include="src\test\TestBatchedTextured.cpp" />
-    <ClCompile Include="src\test\TestClearColor.cpp" />
-    <ClCompile Include="src\test\TestBatchedColored.cpp" />
-    <ClCompile Include="src\test\TestCubeRender.cpp" />
-    <ClCompile Include="src\test\TestDynamicQuadGeometry.cpp" />
-    <ClCompile Include="src\test\TestDynamicTris.cpp" />
-    <ClCompile Include="src\test\TestDynamicVertexGeometry.cpp" />
-    <ClCompile Include="src\test\TestFontRender.cpp" />
-    <ClCompile Include="src\test\TestMenu.cpp" />
-    <ClCompile Include="src\test\TestPostProcessing.cpp" />
-    <ClCompile Include="src\test\TestTexturedSquare.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_demo.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_draw.cpp" />
@@ -389,9 +375,6 @@
     <ClCompile Include="src\vendor\imgui\misc\fonts\binary_to_compressed_c.cpp" />
     <ClCompile Include="src\vendor\imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="res\shaders\basic.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Debugging.h" />
@@ -452,20 +435,6 @@
     <ClInclude Include="src\stdu\rich_string.h" />
     <ClInclude Include="src\stdu\types.h" />
     <ClInclude Include="src\stdu\unique.h" />
-    <ClInclude Include="src\test\DemoFlappyBird.h" />
-    <ClInclude Include="src\test\Test.h" />
-    <ClInclude Include="src\test\TestAdvancedLighting.h" />
-    <ClInclude Include="src\test\TestBatchedTextured.h" />
-    <ClInclude Include="src\test\TestClearColor.h" />
-    <ClInclude Include="src\test\TestBatchedColored.h" />
-    <ClInclude Include="src\test\TestCubeRender.h" />
-    <ClInclude Include="src\test\TestDynamicQuadGeometry.h" />
-    <ClInclude Include="src\test\TestDynamicTris.h" />
-    <ClInclude Include="src\test\TestDynamicVertexGeometry.h" />
-    <ClInclude Include="src\test\TestFontRender.h" />
-    <ClInclude Include="src\test\TestingFramework.h" />
-    <ClInclude Include="src\test\TestPostProcessing.h" />
-    <ClInclude Include="src\test\TestTexturedSquare.h" />
     <ClInclude Include="src\stdu\sorted_vector.h" />
     <ClInclude Include="src\vendor\freetype\freetype\config\ftconfig.h" />
     <ClInclude Include="src\vendor\freetype\freetype\config\ftheader.h" />
@@ -573,19 +542,8 @@
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="res\backup.txt" />
-    <Content Include="res\game_planning.txt" />
-    <Content Include="res\levels\level_test.json" />
-    <Content Include="res\shaders\basic_tex.glsl" />
-    <Content Include="res\textures\block_texture_atl.json" />
-    <Content Include="res\textures\simple_tm.png" />
-    <Content Include="res\textures\test_atlas.png" />
-    <Content Include="res\textures\UV.png" />
+    <Content Include="post_build.bat" />
     <ClCompile Include="src\Maths\Color.cpp" />
-    <Content Include="src\test\res\standard_colored.glsl" />
-    <Content Include="src\test\res\TestBatchedTextured\img1.png" />
-    <Content Include="src\test\res\TestBatchedTextured\img2.png" />
-    <Content Include="src\test\res\TestBatchedTextured\shader.glsl" />
     <Content Include="src\vendor\imgui\.editorconfig" />
     <Content Include="src\vendor\imgui\.gitattributes" />
     <Content Include="src\vendor\imgui\.gitignore" />
