improved io with imgui compatibility, and improved camera controller class

--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=715,475
+Pos=697,329
 Size=532,400
+Collapsed=0
+
+[Window][Camera Controls]
+Pos=176,550
+Size=281,158
 Collapsed=0
 
