--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -4,12 +4,27 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=697,329
+Pos=566,293
 Size=532,400
 Collapsed=0
 
 [Window][Camera Controls]
 Pos=176,550
 Size=281,158
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=728,-45
+Size=550,797
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=60,60
+Size=339,290
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=281,291
+Size=416,156
 Collapsed=0
 
