--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -256,6 +256,7 @@
     </ClCompile>
     <ClCompile Include="src\Graphics\Graphicals\CameraController.cpp" />
     <ClCompile Include="src\Graphics\Graphicals\GenericMesh.cpp" />
+    <ClCompile Include="src\Graphics\Graphicals\Light.cpp" />
     <ClCompile Include="src\Graphics\Graphicals\RenderData.cpp" />
     <ClCompile Include="src\Graphics\GLs\Render.cpp" />
     <ClCompile Include="src\Graphics\GLs\Shader.cpp" />
@@ -367,13 +368,11 @@
     <ClCompile Include="src\vendor\imgui\imgui_draw.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_impl_glfw.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="src\vendor\imgui\imgui_stdlib.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_tables.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_widgets.cpp" />
     <None Include="cpp.hint" />
     <None Include="src\vendor\imgui\main.cpp" />
-    <ClCompile Include="src\vendor\imgui\misc\cpp\imgui_stdlib.cpp" />
-    <ClCompile Include="src\vendor\imgui\misc\fonts\binary_to_compressed_c.cpp" />
-    <ClCompile Include="src\vendor\imgui\misc\freetype\imgui_freetype.cpp" />
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -387,6 +386,7 @@
     <ClInclude Include="src\Graphics\GLs\RenderBuffer.h" />
     <ClInclude Include="src\Graphics\Graphicals\CameraController.h" />
     <ClInclude Include="src\Graphics\Graphicals\GenericMesh.h" />
+    <ClInclude Include="src\Graphics\Graphicals\Light.h" />
     <ClInclude Include="src\Graphics\Graphicals\RenderData.h" />
     <ClInclude Include="src\Graphics\GLs\Render.h" />
     <ClInclude Include="src\Graphics\GLs\Shader.h" />
@@ -532,12 +532,10 @@
     <ClInclude Include="src\vendor\imgui\imgui_impl_glfw.h" />
     <ClInclude Include="src\vendor\imgui\imgui_impl_opengl3.h" />
     <ClInclude Include="src\vendor\imgui\imgui_internal.h" />
+    <ClInclude Include="src\vendor\imgui\imgui_stdlib.h" />
     <ClInclude Include="src\vendor\imgui\imstb_rectpack.h" />
     <ClInclude Include="src\vendor\imgui\imstb_textedit.h" />
     <ClInclude Include="src\vendor\imgui\imstb_truetype.h" />
-    <ClInclude Include="src\vendor\imgui\misc\cpp\imgui_stdlib.h" />
-    <ClInclude Include="src\vendor\imgui\misc\freetype\imgui_freetype.h" />
-    <ClInclude Include="src\vendor\imgui\misc\single_file\imgui_single_file.h" />
     <ClInclude Include="src\vendor\stb_image\stb_image.h" />
   </ItemGroup>
   <ItemGroup>
@@ -546,21 +544,7 @@
     <Content Include="src\vendor\imgui\.editorconfig" />
     <Content Include="src\vendor\imgui\.gitattributes" />
     <Content Include="src\vendor\imgui\.gitignore" />
-    <Content Include="src\vendor\imgui\misc\cpp\README.txt" />
-    <Content Include="src\vendor\imgui\misc\debuggers\imgui.gdb" />
-    <Content Include="src\vendor\imgui\misc\debuggers\imgui.natstepfilter" />
-    <Content Include="src\vendor\imgui\misc\debuggers\README.txt" />
-    <Content Include="src\vendor\imgui\misc\fonts\Cousine-Regular.ttf" />
-    <Content Include="src\vendor\imgui\misc\fonts\DroidSans.ttf" />
-    <Content Include="src\vendor\imgui\misc\fonts\Karla-Regular.ttf" />
-    <Content Include="src\vendor\imgui\misc\fonts\ProggyClean.ttf" />
-    <Content Include="src\vendor\imgui\misc\fonts\ProggyTiny.ttf" />
-    <Content Include="src\vendor\imgui\misc\fonts\Roboto-Medium.ttf" />
-    <Content Include="src\vendor\imgui\misc\freetype\README.md" />
-    <Content Include="src\vendor\imgui\misc\README.txt" />
-  </ItemGroup>
-  <ItemGroup>
-    <Natvis Include="src\vendor\imgui\misc\debuggers\imgui.natvis" />
+    <Content Include="src\vendor\imgui\LICENSE.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
