--- a/Testing/Testing.vcxproj
+++ b/Testing/Testing.vcxproj
@@ -333,6 +333,7 @@
       </AdditionalOptions>
       <UseStandardPreprocessor>true</UseStandardPreprocessor>
     </ClCompile>
+    <ClCompile Include="src\Advanced\TestLightCasters.cpp" />
     <ClCompile Include="src\Advanced\TestMaterialMaps.cpp" />
     <ClCompile Include="src\Advanced\TestPostProcessing.cpp">
       <RuntimeLibrary>MultiThreadedDebugDll</RuntimeLibrary>
@@ -969,6 +970,7 @@
   <ItemGroup>
     <ClInclude Include="src\Advanced\TestAdvancedLighting.h" />
     <ClInclude Include="src\Advanced\TestFontRender.h" />
+    <ClInclude Include="src\Advanced\TestLightCasters.h" />
     <ClInclude Include="src\Advanced\TestMaterialMaps.h" />
     <ClInclude Include="src\Advanced\TestPostProcessing.h" />
     <ClInclude Include="src\Basic\TestBatchedTextured.h" />
@@ -996,6 +998,10 @@
     <Content Include="res\Advanced\TestFontRender\JetBrainsMono-Regular.ttf" />
     <Content Include="res\Advanced\TestFontRender\shader.frag" />
     <Content Include="res\Advanced\TestFontRender\shader.vert" />
+    <Content Include="res\Advanced\TestLightCasters\lights.mtl" />
+    <Content Include="res\Advanced\TestLightCasters\lights.obj" />
+    <Content Include="res\Advanced\TestLightCasters\shader.frag" />
+    <Content Include="res\Advanced\TestLightCasters\shader.vert" />
     <Content Include="res\Advanced\TestMaterialMaps\boxes.obj" />
     <Content Include="res\Advanced\TestMaterialMaps\diffuse.png" />
     <Content Include="res\Advanced\TestMaterialMaps\shader.frag" />
