--- a/Testing/imgui.ini
+++ b/Testing/imgui.ini
@@ -4,17 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Test]
-Pos=566,293
-Size=532,400
+Pos=696,289
+Size=525,400
 Collapsed=0
 
 [Window][Camera Controls]
-Pos=176,550
-Size=281,158
+Pos=225,573
+Size=335,179
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=728,-45
+Pos=447,374
 Size=550,797
 Collapsed=0
 
@@ -26,5 +26,10 @@ Collapsed=0
 [Window][Dear ImGui Debug Log]
 Pos=281,291
 Size=416,156
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=353,894
 Collapsed=0
 
