--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -169,6 +169,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Debug\ConsoleColor.cpp" />
+    <ClCompile Include="Debug\Logger.cpp" />
     <ClCompile Include="src\Graphics\GLs\DynamicIndexBuffer.cpp" />
     <ClCompile Include="src\Graphics\GLs\DynamicVertexBuffer.cpp" />
     <ClCompile Include="src\Graphics\GLs\FrameBuffer.cpp" />
@@ -376,6 +378,9 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Debug\ConsoleColor.h" />
+    <ClInclude Include="Debug\internal_debug_break.h" />
+    <ClInclude Include="Debug\Logger.h" />
     <ClInclude Include="src\Debugging.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicIndexBuffer.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicVertexBuffer.h" />
