--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -73,6 +73,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
     <IntDir>$(SolutionDir)bin\intermediates\$(Platform)\$(Configuration)\</IntDir>
+    <IncludePath>src;src\Debug;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Primitives;src\Maths;src\Graphics\Utils\Fonts;src\Graphics\Utils\Textures;src\Graphics\Utils\Model Loading;src\IO;src\vendor\imgui;src\vendor\freetype;src\vendor;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)bin\$(Platform)\$(Configuration)\</OutDir>
@@ -92,7 +93,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>GLEW_STATIC;OPENGL_EXPORTS</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>src;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Primitives;src\Maths;src\Graphics\Utils\Fonts;src\Graphics\Utils\Textures;src\Graphics\Utils\Model Loading;src\IO;src\vendor\imgui;src\vendor\freetype;src\vendor;src\test;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;src\Debug;src\Graphics\GLs;src\Graphics\Graphicals;src\Graphics\Primitives;src\Maths;src\Graphics\Utils\Fonts;src\Graphics\Utils\Textures;src\Graphics\Utils\Model Loading;src\IO;src\vendor\imgui;src\vendor\freetype;src\vendor;$(SolutionDir)Dependencies\GLFW\include;$(SolutionDir)Dependencies\GLEW\include</AdditionalIncludeDirectories>
       <CompileAs>CompileAsCpp</CompileAs>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <ShowIncludes>false</ShowIncludes>
@@ -169,11 +170,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Debug\ConsoleColor.cpp" />
-    <ClCompile Include="Debug\Logger.cpp" />
+    <ClCompile Include="src\Debug\Logger.cpp" />
     <ClCompile Include="src\Graphics\GLs\DynamicIndexBuffer.cpp" />
     <ClCompile Include="src\Graphics\GLs\DynamicVertexBuffer.cpp" />
     <ClCompile Include="src\Graphics\GLs\FrameBuffer.cpp" />
+    <ClCompile Include="src\Graphics\GLs\GLDebug.cpp" />
     <ClCompile Include="src\Graphics\GLs\GLObject.cpp" />
     <ClCompile Include="src\Graphics\GLs\IndexBuffer.cpp" />
     <ClCompile Include="src\Graphics\GLs\RenderBuffer.cpp">
@@ -273,7 +274,6 @@
     <ClCompile Include="src\Graphics\Utils\Fonts\FontDevice.cpp" />
     <ClCompile Include="src\Graphics\Utils\Fonts\TextAlign.cpp" />
     <ClCompile Include="src\Graphics\Utils\Fonts\TextRenderer.cpp" />
-    <ClCompile Include="src\Graphics\Utils\Fonts\TextStyle.cpp" />
     <ClCompile Include="src\Graphics\Utils\Model Loading\MTLMaterialLoader.cpp" />
     <ClCompile Include="src\Graphics\Utils\Model Loading\OBJModel.cpp" />
     <ClCompile Include="src\Graphics\Utils\Model Loading\OBJModelLoader.cpp" />
@@ -364,7 +364,6 @@
     </ClCompile>
     <ClCompile Include="src\Maths\Matrix.cpp" />
     <ClCompile Include="src\stdu\rich_string.cpp" />
-    <ClCompile Include="src\stdu\unique.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_demo.cpp" />
     <ClCompile Include="src\vendor\imgui\imgui_draw.cpp" />
@@ -378,13 +377,13 @@
     <ClCompile Include="src\vendor\stb_image\stb_image.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Debug\ConsoleColor.h" />
-    <ClInclude Include="Debug\internal_debug_break.h" />
-    <ClInclude Include="Debug\Logger.h" />
-    <ClInclude Include="src\Debugging.h" />
+    <ClInclude Include="src\Debug\ConsoleColor.h" />
+    <ClInclude Include="src\Debug\internal_debug_break.h" />
+    <ClInclude Include="src\Debug\Logger.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicIndexBuffer.h" />
     <ClInclude Include="src\Graphics\GLs\DynamicVertexBuffer.h" />
     <ClInclude Include="src\Graphics\GLs\FrameBuffer.h" />
+    <ClInclude Include="src\Graphics\GLs\GLDebug.h" />
     <ClInclude Include="src\Graphics\GLs\GLObject.h" />
     <ClInclude Include="src\Graphics\GLs\GLTypeID.h" />
     <ClInclude Include="src\Graphics\GLs\IndexBuffer.h" />
@@ -430,7 +429,7 @@
     <ClInclude Include="src\Maths\Vector.h" />
     <ClInclude Include="src\Maths\Matrix.h" />
     <ClInclude Include="src\Maths\VectorImpl.h" />
-    <ClInclude Include="src\opengl.h" />
+    <ClInclude Include="src\core.h" />
     <ClInclude Include="src\stdu\enum_utils.h" />
     <ClInclude Include="src\stdu\io.h" />
     <ClInclude Include="src\stdu\macros.h" />
