vector finalizing with actual templates this time

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ project(MyGame CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_COMPILER_ID "MSVC")
 set(CMAKE_CXX_COMPILER_VERSION "19.latest")
-add_compile_options(/Zc:preprocessor)
-
+if (MSVC)
+    add_compile_options(/Zc:preprocessor)
+endif ()
 ################################################################################
 # Set target arch type if empty. Visual studio solution generator provides it.
 ################################################################################
