--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -181,7 +181,7 @@ endif()
 # add dlls from opengl
 add_custom_command(
     TARGET Testing PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    COMMAND ${CMAKE_COMMAND} -E copy
     "${PROJECT_SOURCE_DIR}\\bin\\${CMAKE_VS_PLATFORM_NAME}\\$<CONFIG>\\OpenGL.dll"
     "${PROJECT_SOURCE_DIR}\\out\\$<CONFIG>\\${CMAKE_VS_PLATFORM_NAME}\\out\\Testing\\")
 
