Add Geometry Shader and update Shader handling
Implemented a Geometry Shader test and recognized Shader geometry in the engine. Fixed "uint" casting issue in Tri and Quad handling. The Shader class now supports shaders with geometry and the Shader files handling was enhanced. In addition, changes were made to various configuration and positioning files.

--- a/OpenGL/CMakeLists.txt
+++ b/OpenGL/CMakeLists.txt
@@ -241,8 +241,8 @@ if(MSVC)
 endif()
 
 add_custom_command(
-    TARGET OpenGL PRE_BUILD
-    COMMAND ${CMAKE_COMMAND} -E copy_if_different
+    TARGET OpenGL POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy
     "${PROJECT_SOURCE_DIR}\\bin\\${CMAKE_VS_PLATFORM_NAME}\\$<CONFIG>\\OpenGL.dll"
     "${PROJECT_SOURCE_DIR}\\out\\$<CONFIG>\\${CMAKE_VS_PLATFORM_NAME}\\out\\Testing\\"
 )
